--- a/index.html
+++ b/index.html
@@ -9,24 +9,37 @@
 <body>
   <header>
     <h1>帮助文档</h1>
-    <nav>
-      <ul>
-        <li><a href="home.html">主页</a></li>
-        <li><a href="guide.html">指南</a></li>
-        <li><a href="contact.html">联系我们</a></li>
-      </ul>
-    </nav>
   </header>
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Waves_Man个人主页</title>
+</head>
+<body>
   <main>
-    <h2>Getting Started</h2>
-    <p>Welcome to our help documentation. Here you can find all the information you need to get started with our product.</p>
-    <!-- more content here -->
+    <h1>写在前面</h1>
+    <p><a href="https://space.bilibili.com/478191001">Waves_Man个人主页</a> <strong>本整合包为免费资源，如果你被收费了那么你被骗了</strong></p>
+    <p>整合包资源全部来自网络整合优化</p>
+    <p>汉化内容来自 <a href="https://www.guxue.online">吹到江心的孤雪 小本杰明儿 炸飞Victor 制</a></p>
+    <p>Waves_Man新增部分汉化内容适配MOD插件</p>
+    <h2>目录</h2>
+    <ul>
+        <li><a href="https://github.com/WavesMan/Lethal_Company-Integration-package/wiki/Page-2#%E7%89%88%E6%9C%AC%E4%BF%A1%E6%81%AF">版本信息</a></li>
+        <li><a href="https://github.com/WavesMan/Lethal_Company-Integration-package/wiki/Page-2#%E4%B8%8B%E8%BD%BD%E6%96%B9%E5%BC%8F">下载方式</a></li>
+        <li><a href="https://github.com/WavesMan/Lethal_Company-Integration-package/wiki/Page-3#%E5%AE%89%E8%A3%85%E6%95%99%E7%A8%8B">安装教程</a></li>
+        <li><a href="https://github.com/WavesMan/Lethal_Company-Integration-package/wiki/Page-4#%E6%9B%B4%E6%96%B0%E6%95%99%E7%A8%8B">更新教程</a></li>
+        <li><a href="https://github.com/WavesMan/Lethal_Company-Integration-package/wiki/Page-5#mod%E5%88%97%E8%A1%A8">MOD列表</a></li>
+        <li><a href="https://github.com/WavesMan/Lethal_Company-Integration-package/wiki/Page-6#bug%E5%85%BC%E5%AE%B9%E6%80%A7%E9%97%AE%E9%A2%98%E6%8F%90%E4%BA%A4">BUG兼容性问题提交</a></li>
+        <li><a href="https://github.com/WavesMan/Lethal_Company-Integration-package/wiki/Page-6#%E6%9B%B4%E6%96%B0%E5%86%85%E5%AE%B9">更新内容</a></li>
+        <li><a href="https://github.com/WavesMan/Lethal_Company-Integration-package/wiki/Page-7#%E5%85%BC%E5%AE%B9%E6%80%A7%E6%B5%8B%E8%AF%95">兼容性测试</a></li>
+        <li><a href="https://github.com/WavesMan/Lethal_Company-Integration-package/wiki/Page-7#%E8%B5%9E%E5%8A%A9">赞助我们</a></li>
+    </ul>
+    <p>感谢您使用我们制作的整合包</p>
   </main>
-
-  <footer>
-    <p>&copy; 2021 帮助文档 | 联系我们: help@example.com</p>
-  </footer>
+    <footer>
+      <p>&copy; 2024 帮助文档 | 联系我们: wavesman.github.io/HTML_test</p>
+    </footer>
   
   <script src="scripts.js"></script>
 </body>
