--- a/sources/page6.html
+++ b/sources/page6.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>兼容性测试与赞助</title>
 </head>
 <body>
