--- a/sources/page5.html
+++ b/sources/page5.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>BUG兼容性问题提交</title>
 </head>
 <body>
