--- a/sources/page1.html
+++ b/sources/page1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://wavesman.github.io/HTML_test/styles.css">
     <title>版本信息</title>
 </head>
 <body>
