--- a/sources/page1.html
+++ b/sources/page1.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>帮助文档</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>帮助文档</h1>
+    </header>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://wavesman.github.io/HTML_test/styles.css">
     <title>版本信息</title>
 </head>
 <body>
+  <main>
     <h2>版本信息</h2>
     <p>当前整合包最新版本v1.3.0</p>
     <p>适配致命公司v49版本</p>
@@ -21,5 +33,9 @@
     
     <h5>自动下载更新脚本</h5>
     <p><a href="https://github.com/WavesMan/WaveYo-Integration-package/releases/tag/Auto-v1.1">GitHub下载</a> | <a href="https://gitee.com/waves-man/WaveYo-Integration-package/releases/tag/Auto-v1.1">Gitee下载</a></p>
+    </main>
+        <footer>
+            <p>&copy; 2024 帮助文档 | 联系我们: wavesman.github.io/HTML_test</p>
+        </footer>
 </body>
 </html>
