--- a/sources/page2.html
+++ b/sources/page2.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>帮助文档</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>帮助文档</h1>
+    </header>
+    
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>安装教程</title>
 </head>
@@ -31,5 +42,9 @@
     <p>运行您下载得到的Git安装包，成功安装后进入第三步</p>
     
     <!-- 其他步骤省略 -->
+</main>
+<footer>
+    <p>&copy; 2024 帮助文档 | 联系我们: wavesman.github.io/HTML_test</p>
+</footer>
 </body>
 </html>
