--- a/sources/page4.html
+++ b/sources/page4.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>帮助文档</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header>
+            <h1>帮助文档</h1>
+        </header>
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,5 +55,9 @@
         <li>假门</li>
         <!-- 其他玩法包的项目省略 -->
     </ul>
+</main>
+<footer>
+    <p>&copy; 2024 帮助文档 | 联系我们: wavesman.github.io/HTML_test</p>
+</footer>
 </body>
 </html>
