--- a/sources/page6.html
+++ b/sources/page6.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>帮助文档</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header>
+            <h1>帮助文档</h1>
+        </header>
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,5 +30,9 @@
 
     <h3>支付宝赞助</h3>
     <img title="Alipay.jpg" src="https://raw.githubusercontent.com/WavesMan/Lethal_Company-Integration-package/main/Files/Pictures/Alipay/Alipay.jpg" alt="Alipay.jpg" width="302" data-align="center">
+</main>
+<footer>
+    <p>&copy; 2024 帮助文档 | 联系我们: wavesman.github.io/HTML_test</p>
+</footer>
 </body>
 </html>
