--- a/sources/page3.html
+++ b/sources/page3.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>帮助文档</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header>
+            <h1>帮助文档</h1>
+        </header>
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,5 +47,9 @@
     <a name="install-instruction"></a>
     <h3>重新安装方法</h3>
     <!-- 省略重新安装方法的具体步骤内容 -->
+</main>
+<footer>
+    <p>&copy; 2024 帮助文档 | 联系我们: wavesman.github.io/HTML_test</p>
+</footer>
 </body>
 </html>
